--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,71 @@
 {
-  "name": "client",
-  "version": "1.0.0",
+  "name": "animal-gallery-ts",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "test": "vitest",
-    "dev": "vite --config vite.config.ts dev",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
-  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "@vitejs/plugin-react": "^2.1.0",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jsdom": "^20.0.0",
-    "prettier": "^2.7.1",
+    "@date-io/jalaali": "^2.16.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/papaparse": "^5.3.7",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^3.37.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.1.0",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.7.4",
-    "typescript-transform-paths": "^3.3.1",
-    "vite": "^3.1.1",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.23.2",
-    "vitest-fetch-mock": "^0.2.1"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
+  },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.11",
+    "babel-plugin-import": "^1.13.5",
+    "customize-cra": "^1.0.0",
+    "postcss": "^8.4.16",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.1.8"
   }
 }
