--- a/express_server/package.json
+++ b/express_server/package.json
@@ -1,30 +1,49 @@
 {
-  "name": "express-server",
+  "name": "node-jwt-sqlite-starter",
+  "type": "module",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.ts"
+    "test": "jest",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "csv": "^6.2.7",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "njwt": "^1.0.0",
+    "sqlite3": "^5.1.4",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.9.3"
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.33",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.3",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6"
   },
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      ".git",
-      "node_modules"
-    ],
-    "watch": [
-      "src"
-    ],
-    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/index.ts"
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
