--- a/express_server/tsconfig.json
+++ b/express_server/tsconfig.json
@@ -1,17 +1,29 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es2016",
+    "module": "commonjs",
+    "outDir": "./dist",
     "strict": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": "./",
-    "paths": {
-      "@express-server/*": ["./src/*"]
-    },
-    "plugins": [{ "transform": "typescript-transform-paths" }]
+    "inlineSourceMap": true,
+    "noImplicitAny": false,
+    "types": [
+      "node",
+      "reflect-metadata",
+      "jest"
+    ],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ]
   },
-  "include": ["src"]
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ],
+  "include": [
+    "./src/**/*.tsx",
+    "./src/**/*.ts"
+  ]
 }
