--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "moment-jalaali": "^0.9.6",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
+    "react-csv-reader": "^3.5.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.2",
